EXPLORE-58: CORS Added