@@ -2,6 +2,7 @@ package com.exploresg.authservice.config;
 
 import com.exploresg.authservice.service.JwtService; // Import JwtService
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationProvider;
@@ -16,6 +17,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -27,6 +29,18 @@ public class SecurityConfig {
         private final AuthenticationProvider authenticationProvider;
         private final JwtService jwtService;
         private final UserDetailsService userDetailsService;
+
+        @Value("${cors.allowed-origins}")
+        private String allowedOrigins;
+
+        @Value("${cors.allowed-methods}")
+        private String allowedMethods;
+
+        @Value("${cors.allowed-headers}")
+        private String allowedHeaders;
+
+        @Value("${cors.allow-credentials}")
+        private boolean allowCredentials;
 
         @Bean
         public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
@@ -62,10 +76,12 @@ public class SecurityConfig {
         @Bean
         public CorsConfigurationSource corsConfigurationSource() {
                 CorsConfiguration configuration = new CorsConfiguration();
-                configuration.setAllowedOrigins(List.of("http://localhost:3000"));
-                configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-                configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
-                configuration.setAllowCredentials(true);
+                configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+                configuration.setAllowedMethods(Arrays.asList(allowedMethods.split(",")));
+                configuration.setAllowedHeaders(Arrays.asList(allowedHeaders.split(",")));
+                configuration.setAllowCredentials(allowCredentials);
+                configuration.setExposedHeaders(List.of("Authorization", "Content-Type"));
+                configuration.setMaxAge(3600L); // Cache preflight for 1 hour
                 UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
                 source.registerCorsConfiguration("/**", configuration);
                 return source;
